Refactored the code, and added logic for optional parameters.