@@ -2,8 +2,8 @@ package com.chargebee.sdk.changelog.generators;
 
 import static com.chargebee.GenUtil.pluralize;
 import static com.chargebee.GenUtil.singularize;
-import static com.chargebee.openapi.Extension.IS_GLOBAL_ENUM;
-import static com.chargebee.sdk.changelog.Constants.*;
+import static com.chargebee.openapi.Extension.*;
+import static com.chargebee.sdk.changelog.Constants.CHANGELOG;
 
 import com.chargebee.openapi.Action;
 import com.chargebee.openapi.Attribute;
@@ -25,6 +25,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class ChangeLogGenerator implements FileGenerator {
+
   private final ChangeLog changeLogGenerator;
   private final Template changeLogTemplate;
 
@@ -49,10 +50,9 @@ public class ChangeLogGenerator implements FileGenerator {
     List<String> requestBodyParamLines =
         generateParameterLine(
             oldResources, newResources, Action::requestBodyParameters, "request body parameter");
-    List<String> allParamLines =
+    changeLogSchema.setNewParams(
         Stream.concat(queryParamLines.stream(), requestBodyParamLines.stream())
-            .collect(Collectors.toList());
-    changeLogSchema.setNewParams(allParamLines);
+            .collect(Collectors.toList()));
 
     changeLogSchema.setNewEventType(
         generateEventLine(
@@ -68,10 +68,9 @@ public class ChangeLogGenerator implements FileGenerator {
     List<String> deletedRequestBodyParamLines =
         generateDeletedParameterLine(
             oldResources, newResources, Action::requestBodyParameters, "request body parameter");
-    List<String> allDeletedParamLines =
+    changeLogSchema.setDeletedParams(
         Stream.concat(deletedQueryParamLines.stream(), deletedRequestBodyParamLines.stream())
-            .collect(Collectors.toList());
-    changeLogSchema.setDeletedParams(allDeletedParamLines);
+            .collect(Collectors.toList()));
 
     changeLogSchema.setDeletedEventType(
         generateDeletedEventLine(
@@ -79,9 +78,11 @@ public class ChangeLogGenerator implements FileGenerator {
 
     changeLogSchema.setNewEnumValues(
         generateEnumValueLines(oldResources, newResources, oldVersion, newerVersion));
-
     changeLogSchema.setDeletedEnumValues(
         generateDeletedEnumValueLines(oldResources, newResources, oldVersion, newerVersion));
+
+    changeLogSchema.setParameterRequirementChangesValues(
+        generateParameterRequirementChanges(oldResources, newResources));
 
     String content =
         changeLogTemplate.apply(
@@ -91,6 +92,12 @@ public class ChangeLogGenerator implements FileGenerator {
     return new FileOp.WriteString("./", output + "CHANGELOG.md", content);
   }
 
+  private List<Resource> filterResources(List<Resource> resources) {
+    return resources.stream()
+        .filter(resource -> !List.of(this.changeLogGenerator.hiddenOverride).contains(resource.id))
+        .collect(Collectors.toList());
+  }
+
   private List<String> generateEventLine(
       List<Map<String, String>> oldEvents, List<Map<String, String>> newEvents) {
     Set<String> oldEventTypes =
@@ -98,28 +105,13 @@ public class ChangeLogGenerator implements FileGenerator {
 
     return newEvents.stream()
         .filter(event -> !oldEventTypes.contains(event.get("type")))
-        .map(event -> convertNewEventToEventLine(event))
-        .collect(Collectors.toCollection(LinkedHashSet::new))
-        .stream()
-        .toList();
-  }
-
-  private String convertNewEventToEventLine(Map<String, String> event) {
-    String eventType = event.get("type");
-    String resourceSchemaName = event.get("resource_schema_name");
-
-    return String.format("- [`%s`](%s) has been added.", eventType, getDocsUrlForEvent(eventType));
-  }
-
-  private String getDocsUrlForEvent(String eventType) {
-    return String.format("https://apidocs.chargebee.com/docs/api/events/webhook/%s", eventType);
-  }
-
-  private String convertNewResourceToResourceLine(Resource r) {
-    String resourceName = r.name;
-    String message =
-        String.format("- [`%s`](%s) has been added.", resourceName, getDocsUrlForResource(r));
-    return message;
+        .map(
+            event -> {
+              String type = event.get("type");
+              return String.format("- [`%s`](%s) has been added.", type, getDocsUrlForEvent(type));
+            })
+        .distinct()
+        .collect(Collectors.toList());
   }
 
   private List<String> generateResourceLine(
@@ -127,13 +119,11 @@ public class ChangeLogGenerator implements FileGenerator {
     Set<String> oldResourceIds =
         oldResources.stream().map(resource -> resource.id).collect(Collectors.toSet());
 
-    Set<String> newResource =
-        newResources.stream()
-            .filter(r -> !oldResourceIds.contains(r.id))
-            .map(r -> convertNewResourceToResourceLine(r))
-            .collect(Collectors.toCollection(LinkedHashSet::new));
-
-    return newResource.stream().toList();
+    return newResources.stream()
+        .filter(r -> !oldResourceIds.contains(r.id))
+        .map(r -> String.format("- [`%s`](%s) has been added.", r.name, getDocsUrlForResource(r)))
+        .distinct()
+        .collect(Collectors.toList());
   }
 
   private List<String> generateActionLine(
@@ -149,13 +139,18 @@ public class ChangeLogGenerator implements FileGenerator {
                             .collect(Collectors.toSet())));
 
     Set<String> newActionLines = new LinkedHashSet<>();
-
     for (Resource newResource : newResources) {
       Set<String> oldActions =
           oldActionsByResourceId.getOrDefault(newResource.id, Collections.emptySet());
       for (Action action : newResource.actions) {
         if (!oldActions.contains(action.name)) {
-          newActionLines.add(convertNewActionToActionLine(newResource, action));
+          newActionLines.add(
+              String.format(
+                  "- [`%s`](%s) has been added to [`%s`](%s).",
+                  action.id,
+                  getDocsUrlForActions(newResource, action),
+                  newResource.name,
+                  getDocsUrlForResource(newResource)));
         }
       }
     }
@@ -183,55 +178,16 @@ public class ChangeLogGenerator implements FileGenerator {
                             !oldAttributesByResourceId
                                 .getOrDefault(resource.id, Collections.emptySet())
                                 .contains(attribute.name))
-                    .map(attribute -> convertNewAttributeToAttributeLine(resource, attribute)))
-        .collect(Collectors.toCollection(LinkedHashSet::new))
-        .stream()
-        .toList();
-  }
-
-  private String convertNewActionToActionLine(Resource resource, Action action) {
-    String resourceName = resource.name;
-
-    return String.format(
-        "- [`%s`](%s) has been added to [`%s`](%s).",
-        action.id,
-        getDocsUrlForActions(resource, action),
-        resourceName,
-        getDocsUrlForResource(resource));
-  }
-
-  private String getDocsUrlForResource(Resource resource) {
-    return String.format("https://apidocs.chargebee.com/docs/api/%s", pluralize(resource.id));
-  }
-
-  private String getDocsUrlForActions(Resource resource, Action action) {
-    String resourcePath = pluralize(resource.id);
-    String actionPath = toHyphenCase(action.id);
-    return String.format("https://apidocs.chargebee.com/docs/api/%s/%s", resourcePath, actionPath);
-  }
-
-  private String convertNewAttributeToAttributeLine(Resource resource, Attribute attribute) {
-    String attributeName = attribute.name;
-    String resourceName = resource.name;
-
-    return String.format(
-        "- [`%s`](%s) has been added to [`%s`](%s).",
-        attributeName,
-        getDocsUrlForAttribute(resource, attribute),
-        resourceName,
-        getDocsUrlForResource(resource));
-  }
-
-  private String getDocsUrlForAttribute(Resource resource, Attribute attribute) {
-    String resourcePath = pluralize(resource.id);
-    String attributePath = attribute.name;
-    return String.format(
-        "https://apidocs.chargebee.com/docs/api/%s/%s-object#%s",
-        resourcePath, toHyphenCase(singularize(resource.id)), attributePath);
-  }
-
-  private String toHyphenCase(String s) {
-    return CaseFormat.LOWER_UNDERSCORE.to(CaseFormat.LOWER_HYPHEN, s);
+                    .map(
+                        attribute ->
+                            String.format(
+                                "- [`%s`](%s) has been added to [`%s`](%s).",
+                                attribute.name,
+                                getDocsUrlForAttribute(resource, attribute),
+                                resource.name,
+                                getDocsUrlForResource(resource))))
+        .distinct()
+        .collect(Collectors.toList());
   }
 
   private List<String> generateParameterLine(
@@ -252,58 +208,32 @@ public class ChangeLogGenerator implements FileGenerator {
                                     action -> action.id,
                                     action ->
                                         parameterExtractor.apply(action).stream()
-                                            .map(param -> param.getName())
+                                            .map(Parameter::getName)
                                             .collect(Collectors.toSet())))));
 
     Set<String> newParamLines = new LinkedHashSet<>();
-
     for (Resource newResource : newResources) {
       Map<String, Set<String>> oldActionsMap =
           oldParamsByResourceAndAction.getOrDefault(newResource.id, Collections.emptyMap());
-
       for (Action action : newResource.actions) {
         Set<String> oldParams = oldActionsMap.getOrDefault(action.id, Collections.emptySet());
-
         for (Parameter param : parameterExtractor.apply(action)) {
           if (!oldParams.contains(param.getName())) {
-            newParamLines.add(convertNewParameterToLine(newResource, action, param, parameterType));
+            newParamLines.add(
+                String.format(
+                    "- [`%s`](%s) has been added as %s to [`%s`](%s) in [`%s`](%s).",
+                    param.getName(),
+                    getDocsUrlForParameter(newResource, action, param),
+                    parameterType,
+                    action.id,
+                    getDocsUrlForActions(newResource, action),
+                    newResource.name,
+                    getDocsUrlForResource(newResource)));
           }
         }
       }
     }
-
     return new ArrayList<>(newParamLines);
-  }
-
-  private String convertNewParameterToLine(
-      Resource resource, Action action, Parameter param, String parameterType) {
-    String paramName = param.getName();
-    String resourceName = resource.name;
-
-    return String.format(
-        "- [`%s`](%s) has been added as %s to [`%s`](%s) in [`%s`](%s).",
-        paramName,
-        getDocsUrlForParameter(resource, action, param),
-        parameterType,
-        action.id,
-        getDocsUrlForActions(resource, action),
-        resourceName,
-        getDocsUrlForResource(resource));
-  }
-
-  private String getDocsUrlForParameter(Resource resource, Action action, Parameter param) {
-    String resourcePath = pluralize(resource.id);
-    String actionPath = toHyphenCase(action.id);
-    String paramPath = param.getName();
-    return String.format(
-        "https://apidocs.chargebee.com/docs/api/%s/%s#%s", resourcePath, actionPath, paramPath);
-  }
-
-  private List<com.chargebee.openapi.Resource> filterResources(
-      List<com.chargebee.openapi.Resource> resources) {
-    return resources.stream()
-        .filter(resource -> !List.of(this.changeLogGenerator.hiddenOverride).contains(resource.id))
-        .collect(Collectors.toList());
   }
 
   private List<String> generateDeletedResourceLine(
@@ -311,18 +241,11 @@ public class ChangeLogGenerator implements FileGenerator {
     Set<String> newResourceIds =
         newResources.stream().map(resource -> resource.id).collect(Collectors.toSet());
 
-    Set<String> deletedResource =
-        oldResources.stream()
-            .filter(r -> !newResourceIds.contains(r.id))
-            .map(r -> convertDeletedResourceToResourceLine(r))
-            .collect(Collectors.toCollection(LinkedHashSet::new));
-
-    return deletedResource.stream().toList();
-  }
-
-  private String convertDeletedResourceToResourceLine(Resource r) {
-    String resourceName = r.name;
-    return String.format("- %s has been removed.", resourceName);
+    return oldResources.stream()
+        .filter(r -> !newResourceIds.contains(r.id))
+        .map(r -> String.format("- %s has been removed.", r.name))
+        .distinct()
+        .collect(Collectors.toList());
   }
 
   private List<String> generateDeletedActionLine(
@@ -332,14 +255,11 @@ public class ChangeLogGenerator implements FileGenerator {
             .collect(Collectors.toMap(resource -> resource.id, resource -> resource));
 
     Set<String> deletedActionLines = new LinkedHashSet<>();
-
     for (Resource oldResource : oldResources) {
       Resource newResource = newResourcesMap.get(oldResource.id);
-
       if (newResource != null) {
         Set<String> newActions =
             newResource.actions.stream().map(action -> action.name).collect(Collectors.toSet());
-
         for (Action action : oldResource.actions) {
           if (!newActions.contains(action.name)) {
             deletedActionLines.add(convertDeletedActionToActionLine(newResource, action, true));
@@ -356,15 +276,12 @@ public class ChangeLogGenerator implements FileGenerator {
 
   private String convertDeletedActionToActionLine(
       Resource resource, Action action, boolean hyperlinkResource) {
-    String resourceName = resource.name;
-
     if (hyperlinkResource) {
       return String.format(
           "- `%s` has been removed from [`%s`](%s).",
-          action.id, resourceName, getDocsUrlForResource(resource));
-    } else {
-      return String.format("- `%s` has been removed from `%s`.", action.id, resourceName);
+          action.id, resource.name, getDocsUrlForResource(resource));
     }
+    return String.format("- `%s` has been removed from `%s`.", action.id, resource.name);
   }
 
   private List<String> generateDeletedAttributeLine(
@@ -374,16 +291,13 @@ public class ChangeLogGenerator implements FileGenerator {
             .collect(Collectors.toMap(resource -> resource.id, resource -> resource));
 
     Set<String> deletedAttributeLines = new LinkedHashSet<>();
-
     for (Resource oldResource : oldResources) {
       Resource newResource = newResourcesMap.get(oldResource.id);
-
       if (newResource != null) {
         Set<String> newAttributes =
             newResource.attributes().stream()
                 .map(attribute -> attribute.name)
                 .collect(Collectors.toSet());
-
         for (Attribute attribute : oldResource.attributes()) {
           if (!newAttributes.contains(attribute.name)) {
             deletedAttributeLines.add(
@@ -397,22 +311,17 @@ public class ChangeLogGenerator implements FileGenerator {
         }
       }
     }
-
     return new ArrayList<>(deletedAttributeLines);
   }
 
   private String convertDeletedAttributeToAttributeLine(
       Resource resource, Attribute attribute, boolean hyperlinkResource) {
-    String attributeName = attribute.name;
-    String resourceName = resource.name;
-
     if (hyperlinkResource) {
       return String.format(
           "- `%s` has been removed from [`%s`](%s).",
-          attributeName, resourceName, getDocsUrlForResource(resource));
-    } else {
-      return String.format("- `%s` has been removed from `%s`.", attributeName, resourceName);
+          attribute.name, resource.name, getDocsUrlForResource(resource));
     }
+    return String.format("- `%s` has been removed from `%s`.", attribute.name, resource.name);
   }
 
   private List<String> generateDeletedParameterLine(
@@ -426,10 +335,8 @@ public class ChangeLogGenerator implements FileGenerator {
             .collect(Collectors.toMap(resource -> resource.id, resource -> resource));
 
     Set<String> deletedParamLines = new LinkedHashSet<>();
-
     for (Resource oldResource : oldResources) {
       Resource newResource = newResourcesMap.get(oldResource.id);
-
       if (newResource != null) {
         Map<String, Action> newActionsMap =
             newResource.actions.stream()
@@ -437,13 +344,11 @@ public class ChangeLogGenerator implements FileGenerator {
 
         for (Action oldAction : oldResource.actions) {
           Action newAction = newActionsMap.get(oldAction.id);
-
           if (newAction != null) {
             Set<String> newParams =
                 parameterExtractor.apply(newAction).stream()
-                    .map(param -> param.getName())
+                    .map(Parameter::getName)
                     .collect(Collectors.toSet());
-
             for (Parameter param : parameterExtractor.apply(oldAction)) {
               if (!newParams.contains(param.getName())) {
                 deletedParamLines.add(
@@ -469,7 +374,6 @@ public class ChangeLogGenerator implements FileGenerator {
         }
       }
     }
-
     return new ArrayList<>(deletedParamLines);
   }
 
@@ -480,27 +384,27 @@ public class ChangeLogGenerator implements FileGenerator {
       String parameterType,
       boolean hyperlinkResource,
       boolean hyperlinkAction) {
-    String paramName = param.getName();
-    String resourceName = resource.name;
-
     if (hyperlinkResource && hyperlinkAction) {
       return String.format(
           "- `%s` has been removed as %s from [`%s`](%s) in [`%s`](%s).",
-          paramName,
+          param.getName(),
           parameterType,
           action.id,
           getDocsUrlForActions(resource, action),
-          resourceName,
+          resource.name,
           getDocsUrlForResource(resource));
-    } else if (hyperlinkResource && !hyperlinkAction) {
+    } else if (hyperlinkResource) {
       return String.format(
           "- `%s` has been removed as %s from `%s` in [`%s`](%s).",
-          paramName, parameterType, action.id, resourceName, getDocsUrlForResource(resource));
-    } else {
-      return String.format(
-          "- `%s` has been removed as %s from `%s` in `%s`.",
-          paramName, parameterType, action.id, resourceName);
+          param.getName(),
+          parameterType,
+          action.id,
+          resource.name,
+          getDocsUrlForResource(resource));
     }
+    return String.format(
+        "- `%s` has been removed as %s from `%s` in `%s`.",
+        param.getName(), parameterType, action.id, resource.name);
   }
 
   private List<String> generateDeletedEventLine(
@@ -510,111 +414,48 @@ public class ChangeLogGenerator implements FileGenerator {
 
     return oldEvents.stream()
         .filter(event -> !newEventTypes.contains(event.get("type")))
-        .map(event -> convertDeletedEventToEventLine(event))
-        .collect(Collectors.toCollection(LinkedHashSet::new))
-        .stream()
-        .toList();
+        .map(event -> String.format("- `%s` has been removed.", event.get("type")))
+        .distinct()
+        .collect(Collectors.toList());
   }
 
-  private String convertDeletedEventToEventLine(Map<String, String> event) {
-    String eventType = event.get("type");
-    return String.format("- `%s` has been removed.", eventType);
-  }
-
-  /**
-   * Generate lines for new enum values (both global and attribute-level enums)
-   */
   private List<String> generateEnumValueLines(
       List<Resource> oldResources, List<Resource> newResources, Spec oldSpec, Spec newSpec) {
-
     Set<String> enumLines = new LinkedHashSet<>();
-
-    // Handle global enums
     enumLines.addAll(generateGlobalEnumLines(oldSpec.globalEnums(), newSpec.globalEnums()));
-
-    // Handle attribute-level enums (excluding global enums)
     enumLines.addAll(generateAttributeEnumLines(oldResources, newResources));
-
-    // Handle parameter enums (both query and request body)
     enumLines.addAll(generateParameterEnumLines(oldResources, newResources));
-
     return new ArrayList<>(enumLines);
   }
 
-  /**
-   * Generate lines for global enum changes (grouped by enum name)
-   */
   private List<String> generateGlobalEnumLines(
       List<Enum> oldGlobalEnums, List<Enum> newGlobalEnums) {
-
     List<String> lines = new ArrayList<>();
-
-    // Build map of old enum values
     Map<String, Set<String>> oldEnumValuesMap =
         oldGlobalEnums.stream()
             .collect(Collectors.toMap(e -> e.name, e -> new HashSet<>(e.values())));
 
-    // Find new values in each global enum and group them
     for (Enum newEnum : newGlobalEnums) {
       Set<String> oldValues = oldEnumValuesMap.getOrDefault(newEnum.name, Collections.emptySet());
-
-      List<String> newValues = new ArrayList<>();
-      for (String value : newEnum.values()) {
-        if (!oldValues.contains(value)) {
-          newValues.add(value);
-        }
-      }
+      List<String> newValues =
+          newEnum.values().stream()
+              .filter(value -> !oldValues.contains(value))
+              .collect(Collectors.toList());
 
       if (!newValues.isEmpty()) {
-        lines.add(formatEnumValuesLine(newValues, newEnum.name, true));
+        lines.add(
+            String.format("- %s to enum `%s`.", formatValuesList(newValues, true), newEnum.name));
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format enum values into a single line
-   */
-  private String formatEnumValuesLine(List<String> values, String enumName, boolean isGlobal) {
-    if (values.isEmpty()) {
-      return "";
-    }
-
-    String valuesStr;
-    if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been added as a new value", values.get(0));
-    } else if (values.size() == 2) {
-      valuesStr =
-          String.format(
-              "`%s` and `%s` have been added as new values", values.get(0), values.get(1));
-    } else {
-      String lastValue = values.get(values.size() - 1);
-      String otherValues =
-          values.subList(0, values.size() - 1).stream()
-              .map(v -> String.format("`%s`", v))
-              .collect(Collectors.joining(", "));
-      valuesStr =
-          String.format("%s, and `%s` have been added as new values", otherValues, lastValue);
-    }
-
-    return String.format("- %s to global enum `%s`.", valuesStr, enumName);
-  }
-
-  /**
-   * Generate lines for attribute-level enum changes (excluding global enums)
-   * Grouped by resource and attribute
-   */
   private List<String> generateAttributeEnumLines(
       List<Resource> oldResources, List<Resource> newResources) {
-
-    // Build map of old resource attributes and their enum values
     Map<String, Map<String, Set<String>>> oldEnumsByResource = new HashMap<>();
-
     for (Resource oldResource : oldResources) {
       Map<String, Set<String>> attributeEnums = new HashMap<>();
       for (Attribute attr : oldResource.attributes()) {
-        // Only process non-global enum attributes
         if (attr.isEnumAttribute() && !attr.isGlobalEnumAttribute()) {
           attributeEnums.put(attr.name, new HashSet<>(attr.getEnum().values()));
         }
@@ -622,136 +463,41 @@ public class ChangeLogGenerator implements FileGenerator {
       oldEnumsByResource.put(oldResource.id, attributeEnums);
     }
 
-    // Check for new enum values in new resources
     List<String> lines = new ArrayList<>();
-
     for (Resource newResource : newResources) {
       Map<String, Set<String>> oldAttributeEnums =
           oldEnumsByResource.getOrDefault(newResource.id, Collections.emptyMap());
-
       for (Attribute newAttr : newResource.attributes()) {
-        // Only process non-global enum attributes
         if (newAttr.isEnumAttribute() && !newAttr.isGlobalEnumAttribute()) {
           Set<String> oldValues =
               oldAttributeEnums.getOrDefault(newAttr.name, Collections.emptySet());
-          List<String> newEnumValues = newAttr.getEnum().values();
-
-          // Find new enum values
-          List<String> addedValues = new ArrayList<>();
-          for (String value : newEnumValues) {
-            if (!oldValues.contains(value)) {
-              addedValues.add(value);
-            }
-          }
+          List<String> addedValues =
+              newAttr.getEnum().values().stream()
+                  .filter(value -> !oldValues.contains(value))
+                  .collect(Collectors.toList());
 
           if (!addedValues.isEmpty()) {
-            lines.add(formatAttributeEnumValuesLine(addedValues, newResource, newAttr));
+            lines.add(
+                String.format(
+                    "- %s to enum attribute [`%s`](%s) in [`%s`](%s).",
+                    formatValuesList(addedValues, true),
+                    newAttr.name,
+                    getDocsUrlForAttribute(newResource, newAttr),
+                    newResource.name,
+                    getDocsUrlForResource(newResource)));
           }
         }
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format attribute enum values into a single line
-   */
-  private String formatAttributeEnumValuesLine(
-      List<String> values, Resource resource, Attribute attribute) {
-
-    if (values.isEmpty()) {
-      return "";
-    }
-
-    String valuesStr;
-    if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been added as a new value", values.get(0));
-    } else if (values.size() == 2) {
-      valuesStr =
-          String.format(
-              "`%s` and `%s` have been added as new values", values.get(0), values.get(1));
-    } else {
-      String lastValue = values.get(values.size() - 1);
-      String otherValues =
-          values.subList(0, values.size() - 1).stream()
-              .map(v -> String.format("`%s`", v))
-              .collect(Collectors.joining(", "));
-      valuesStr =
-          String.format("%s, and `%s` have been added as new values", otherValues, lastValue);
-    }
-
-    return String.format(
-        "- %s to enum attribute [`%s`](%s) in [`%s`](%s).",
-        valuesStr,
-        attribute.name,
-        getDocsUrlForAttribute(resource, attribute),
-        resource.name,
-        getDocsUrlForResource(resource));
-  }
-
-  /**
-   * Generate lines for parameter enum changes
-   * Handles both query parameters and request body parameters
-   */
   private List<String> generateParameterEnumLines(
       List<Resource> oldResources, List<Resource> newResources) {
-
     List<String> lines = new ArrayList<>();
+    Map<String, Map<String, Map<String, Set<String>>>> oldParamEnumsByResource =
+        collectParameterEnums(oldResources);
 
-    // Build map of old parameters and their enum values
-    Map<String, Map<String, Map<String, Set<String>>>> oldParamEnumsByResource = new HashMap<>();
-
-    for (Resource oldResource : oldResources) {
-      Map<String, Map<String, Set<String>>> actionParams = new HashMap<>();
-
-      for (Action action : oldResource.actions) {
-        Map<String, Set<String>> paramEnums = new HashMap<>();
-
-        // Process query parameters
-        for (Parameter param : action.queryParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            paramEnums.put("query:" + param.getName(), new HashSet<>(param.getEnumValues()));
-          }
-          if (param.schema.getProperties() != null) {
-            param
-                .schema
-                .getProperties()
-                .forEach(
-                    (key, value) -> {
-                      if (isEnumSchema(value) && !isGlobalEnumSchema(value)) {
-                        paramEnums.put(
-                            "query:" + param.getName() + "." + key, getEnumValues(value));
-                      }
-                    });
-          }
-        }
-
-        // Process request body parameters
-        for (Parameter param : action.requestBodyParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            paramEnums.put("body:" + param.getName(), new HashSet<>(param.getEnumValues()));
-          }
-          if (param.schema.getProperties() != null) {
-            param
-                .schema
-                .getProperties()
-                .forEach(
-                    (key, value) -> {
-                      if (isEnumSchema(value) && !isGlobalEnumSchema(value)) {
-                        paramEnums.put("body:" + param.getName() + "." + key, getEnumValues(value));
-                      }
-                    });
-          }
-        }
-
-        actionParams.put(action.id, paramEnums);
-      }
-
-      oldParamEnumsByResource.put(oldResource.id, actionParams);
-    }
-
-    // Check for new enum values in parameters
     for (Resource newResource : newResources) {
       Map<String, Map<String, Set<String>>> oldActionParams =
           oldParamEnumsByResource.getOrDefault(newResource.id, Collections.emptyMap());
@@ -759,260 +505,132 @@ public class ChangeLogGenerator implements FileGenerator {
       for (Action action : newResource.actions) {
         Map<String, Set<String>> oldParamEnums =
             oldActionParams.getOrDefault(action.id, Collections.emptyMap());
-
-        // Process query parameters
-        for (Parameter param : action.queryParameters()) {
-          Set<String> addedValues = new HashSet<>();
-
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            Set<String> oldValues =
-                oldParamEnums.getOrDefault("query:" + param.getName(), Collections.emptySet());
-            for (String value : param.getEnumValues()) {
-              if (!oldValues.contains(value)) {
-                addedValues.add(value);
-              }
-            }
-
-            if (!addedValues.isEmpty()) {
-              lines.add(
-                  formatParameterEnumValuesLine(
-                      addedValues.stream().toList(),
-                      newResource,
-                      action,
-                      param,
-                      "query parameter"));
-            }
-          }
-
-          // Process nested properties separately
-          if (param.schema.getProperties() != null) {
-            param
-                .schema
-                .getProperties()
-                .forEach(
-                    (key, value) -> {
-                      if (isEnumSchema(value) && !isGlobalEnumSchema(value)) {
-                        Set<String> nestedAddedValues = new HashSet<>();
-                        Set<String> oldValues =
-                            oldParamEnums.getOrDefault(
-                                "query:" + param.getName() + "." + key, Collections.emptySet());
-                        for (String enumValue : getEnumValues(value)) {
-                          if (!oldValues.contains(enumValue)) {
-                            nestedAddedValues.add(enumValue);
-                          }
-                        }
-
-                        if (!nestedAddedValues.isEmpty()) {
-                          // Create a parameter with the full nested path
-                          Parameter nestedParam = new Parameter(param.getName() + "." + key, value);
-                          lines.add(
-                              formatParameterEnumValuesLine(
-                                  nestedAddedValues.stream().toList(),
-                                  newResource,
-                                  action,
-                                  nestedParam,
-                                  "query parameter"));
-                        }
-                      }
-                    });
-          }
-        }
-
-        // Process request body parameters
-        for (Parameter param : action.requestBodyParameters()) {
-          Set<String> addedValues = new HashSet<>();
-
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            Set<String> oldValues =
-                oldParamEnums.getOrDefault("body:" + param.getName(), Collections.emptySet());
-            for (String value : param.getEnumValues()) {
-              if (!oldValues.contains(value)) {
-                addedValues.add(value);
-              }
-            }
-
-            if (!addedValues.isEmpty()) {
-              lines.add(
-                  formatParameterEnumValuesLine(
-                      addedValues.stream().toList(),
-                      newResource,
-                      action,
-                      param,
-                      "request body parameter"));
-            }
-          }
-
-          // Process nested properties separately
-          if (param.schema.getProperties() != null) {
-            param
-                .schema
-                .getProperties()
-                .forEach(
-                    (key, value) -> {
-                      if (isEnumSchema(value) && !isGlobalEnumSchema(value)) {
-                        Set<String> nestedAddedValues = new HashSet<>();
-                        Set<String> oldValues =
-                            oldParamEnums.getOrDefault(
-                                "body:" + param.getName() + "." + key, Collections.emptySet());
-                        for (String enumValue : getEnumValues(value)) {
-                          if (!oldValues.contains(enumValue)) {
-                            nestedAddedValues.add(enumValue);
-                          }
-                        }
-
-                        if (!nestedAddedValues.isEmpty()) {
-                          // Create a parameter with the full nested path
-                          Parameter nestedParam = new Parameter(param.getName() + "." + key, value);
-                          lines.add(
-                              formatParameterEnumValuesLine(
-                                  nestedAddedValues.stream().toList(),
-                                  newResource,
-                                  action,
-                                  nestedParam,
-                                  "request body parameter"));
-                        }
-                      }
-                    });
-          }
-        }
+        processNewParameterEnums(
+            newResource, action, action.queryParameters(), "query", oldParamEnums, lines);
+        processNewParameterEnums(
+            newResource, action, action.requestBodyParameters(), "body", oldParamEnums, lines);
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format parameter enum values into a single line
-   */
-  private String formatParameterEnumValuesLine(
+  private void processNewParameterEnums(
+      Resource resource,
+      Action action,
+      List<Parameter> parameters,
+      String prefix,
+      Map<String, Set<String>> oldParamEnums,
+      List<String> lines) {
+    for (Parameter param : parameters) {
+      if (param.isEnum()
+          && !(param.isGlobalEnum() || param.isExternalEnum() || param.isGenSeperate())) {
+        List<String> addedValues =
+            getNewEnumValues(
+                param.getEnumValues(),
+                oldParamEnums.getOrDefault(prefix + ":" + param.getName(), Collections.emptySet()));
+        if (!addedValues.isEmpty()) {
+          addParamEnumLine(
+              lines,
+              addedValues,
+              resource,
+              action,
+              param,
+              prefix.equals("query") ? "query parameter" : "request body parameter");
+        }
+      }
+      if (param.schema.getProperties() != null) {
+        param
+            .schema
+            .getProperties()
+            .forEach(
+                (key, value) -> {
+                  if (isEnumSchema(value)
+                      && !(isGlobalEnumSchema(value)
+                          || isExternalEnumSchema(value)
+                          || isGenSeperatSchema(value))) {
+                    List<String> addedValues =
+                        getNewEnumValues(
+                            new ArrayList<>(getEnumValues(value)),
+                            oldParamEnums.getOrDefault(
+                                prefix + ":" + param.getName() + "." + key,
+                                Collections.emptySet()));
+                    if (!addedValues.isEmpty()) {
+                      addParamEnumLine(
+                          lines,
+                          addedValues,
+                          resource,
+                          action,
+                          new Parameter(param.getName() + "." + key, value),
+                          prefix.equals("query") ? "query parameter" : "request body parameter");
+                    }
+                  }
+                });
+      }
+    }
+  }
+
+  private void addParamEnumLine(
+      List<String> lines,
       List<String> values,
       Resource resource,
       Action action,
       Parameter param,
-      String parameterType) {
-
-    if (values.isEmpty()) {
-      return "";
-    }
-
-    String valuesStr;
-    if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been added as a new value", values.get(0));
-    } else if (values.size() == 2) {
-      valuesStr =
-          String.format(
-              "`%s` and `%s` have been added as new values", values.get(0), values.get(1));
-    } else {
-      String lastValue = values.get(values.size() - 1);
-      String otherValues =
-          values.subList(0, values.size() - 1).stream()
-              .map(v -> String.format("`%s`", v))
-              .collect(Collectors.joining(", "));
-      valuesStr =
-          String.format("%s, and `%s` have been added as new values", otherValues, lastValue);
-    }
-
-    return String.format(
-        "- %s to enum %s `%s` in [`%s`](%s) of [`%s`](%s).",
-        valuesStr,
-        parameterType,
-        param.getName(),
-        action.id,
-        getDocsUrlForActions(resource, action),
-        resource.name,
-        getDocsUrlForResource(resource));
+      String type) {
+    lines.add(
+        String.format(
+            "- %s to enum %s `%s` in [`%s`](%s) of [`%s`](%s).",
+            formatValuesList(values, true),
+            type,
+            param.getName(),
+            action.id,
+            getDocsUrlForActions(resource, action),
+            resource.name,
+            getDocsUrlForResource(resource)));
   }
 
-  /**
-   * Generate lines for deleted enum values
-   */
+  private List<String> getNewEnumValues(List<String> current, Set<String> old) {
+    return current.stream().filter(v -> !old.contains(v)).collect(Collectors.toList());
+  }
+
   private List<String> generateDeletedEnumValueLines(
       List<Resource> oldResources, List<Resource> newResources, Spec oldSpec, Spec newSpec) {
-
     Set<String> enumLines = new LinkedHashSet<>();
-
-    // Handle global enums
     enumLines.addAll(generateDeletedGlobalEnumLines(oldSpec.globalEnums(), newSpec.globalEnums()));
-
-    // Handle attribute-level enums (excluding global enums)
     enumLines.addAll(generateDeletedAttributeEnumLines(oldResources, newResources));
-
-    // Handle parameter enums
     enumLines.addAll(generateDeletedParameterEnumLines(oldResources, newResources));
-
     return new ArrayList<>(enumLines);
   }
 
-  /**
-   * Generate lines for deleted global enum values (grouped)
-   */
   private List<String> generateDeletedGlobalEnumLines(
       List<Enum> oldGlobalEnums, List<Enum> newGlobalEnums) {
-
     List<String> lines = new ArrayList<>();
-
-    // Build map of new enum values
     Map<String, Set<String>> newEnumValuesMap =
         newGlobalEnums.stream()
             .collect(Collectors.toMap(e -> e.name, e -> new HashSet<>(e.values())));
 
-    // Find deleted values in each global enum and group them
     for (Enum oldEnum : oldGlobalEnums) {
       Set<String> newValues = newEnumValuesMap.getOrDefault(oldEnum.name, Collections.emptySet());
-
-      List<String> deletedValues = new ArrayList<>();
-      for (String value : oldEnum.values()) {
-        if (!newValues.contains(value)) {
-          deletedValues.add(value);
-        }
-      }
+      List<String> deletedValues =
+          oldEnum.values().stream()
+              .filter(value -> !newValues.contains(value))
+              .collect(Collectors.toList());
 
       if (!deletedValues.isEmpty()) {
-        lines.add(formatDeletedEnumValuesLine(deletedValues, oldEnum.name));
+        lines.add(
+            String.format(
+                "- %s from global enum `%s`.",
+                formatValuesList(deletedValues, false), oldEnum.name));
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format deleted enum values into a single line
-   */
-  private String formatDeletedEnumValuesLine(List<String> values, String enumName) {
-    if (values.isEmpty()) {
-      return "";
-    }
-
-    String valuesStr;
-    if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been removed", values.get(0));
-    } else if (values.size() == 2) {
-      valuesStr = String.format("`%s` and `%s` have been removed", values.get(0), values.get(1));
-    } else {
-      String lastValue = values.get(values.size() - 1);
-      String otherValues =
-          values.subList(0, values.size() - 1).stream()
-              .map(v -> String.format("`%s`", v))
-              .collect(Collectors.joining(", "));
-      valuesStr = String.format("%s, and `%s` have been removed", otherValues, lastValue);
-    }
-
-    return String.format("- %s from global enum `%s`.", valuesStr, enumName);
-  }
-
-  /**
-   * Generate lines for deleted attribute-level enum values (grouped, excluding global enums)
-   */
   private List<String> generateDeletedAttributeEnumLines(
       List<Resource> oldResources, List<Resource> newResources) {
-
-    // Build map of new resource attributes and their enum values
     Map<String, Map<String, Set<String>>> newEnumsByResource = new HashMap<>();
-
     for (Resource newResource : newResources) {
       Map<String, Set<String>> attributeEnums = new HashMap<>();
       for (Attribute attr : newResource.attributes()) {
-        // Only process non-global enum attributes
         if (attr.isEnumAttribute() && !attr.isGlobalEnumAttribute()) {
           attributeEnums.put(attr.name, new HashSet<>(attr.getEnum().values()));
         }
@@ -1020,109 +638,41 @@ public class ChangeLogGenerator implements FileGenerator {
       newEnumsByResource.put(newResource.id, attributeEnums);
     }
 
-    // Check for deleted enum values
     List<String> lines = new ArrayList<>();
-
     for (Resource oldResource : oldResources) {
       Map<String, Set<String>> newAttributeEnums =
           newEnumsByResource.getOrDefault(oldResource.id, Collections.emptyMap());
-
       for (Attribute oldAttr : oldResource.attributes()) {
-        // Only process non-global enum attributes
         if (oldAttr.isEnumAttribute() && !oldAttr.isGlobalEnumAttribute()) {
           Set<String> newValues =
               newAttributeEnums.getOrDefault(oldAttr.name, Collections.emptySet());
-          List<String> oldEnumValues = oldAttr.getEnum().values();
-
-          // Find deleted enum values
-          List<String> deletedValues = new ArrayList<>();
-          for (String value : oldEnumValues) {
-            if (!newValues.contains(value)) {
-              deletedValues.add(value);
-            }
-          }
+          List<String> deletedValues =
+              oldAttr.getEnum().values().stream()
+                  .filter(value -> !newValues.contains(value))
+                  .collect(Collectors.toList());
 
           if (!deletedValues.isEmpty()) {
-            lines.add(formatDeletedAttributeEnumValuesLine(deletedValues, oldResource, oldAttr));
+            lines.add(
+                String.format(
+                    "- %s from enum attribute [`%s`](%s) in [`%s`](%s).",
+                    formatValuesList(deletedValues, false),
+                    oldAttr.name,
+                    getDocsUrlForAttribute(oldResource, oldAttr),
+                    oldResource.name,
+                    getDocsUrlForResource(oldResource)));
           }
         }
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format deleted attribute enum values into a single line
-   */
-  private String formatDeletedAttributeEnumValuesLine(
-      List<String> values, Resource resource, Attribute attribute) {
-
-    if (values.isEmpty()) {
-      return "";
-    }
-
-    String valuesStr;
-    if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been removed", values.get(0));
-    } else if (values.size() == 2) {
-      valuesStr = String.format("`%s` and `%s` have been removed", values.get(0), values.get(1));
-    } else {
-      String lastValue = values.get(values.size() - 1);
-      String otherValues =
-          values.subList(0, values.size() - 1).stream()
-              .map(v -> String.format("`%s`", v))
-              .collect(Collectors.joining(", "));
-      valuesStr = String.format("%s, and `%s` have been removed", otherValues, lastValue);
-    }
-
-    return String.format(
-        "- %s from enum attribute [`%s`](%s) in [`%s`](%s).",
-        valuesStr,
-        attribute.name,
-        getDocsUrlForAttribute(resource, attribute),
-        resource.name,
-        getDocsUrlForResource(resource));
-  }
-
-  /**
-   * Generate lines for deleted parameter enum values
-   */
   private List<String> generateDeletedParameterEnumLines(
       List<Resource> oldResources, List<Resource> newResources) {
-
     List<String> lines = new ArrayList<>();
+    Map<String, Map<String, Map<String, Set<String>>>> newParamEnumsByResource =
+        collectParameterEnums(newResources);
 
-    // Build map of new parameters and their enum values
-    Map<String, Map<String, Map<String, Set<String>>>> newParamEnumsByResource = new HashMap<>();
-
-    for (Resource newResource : newResources) {
-      Map<String, Map<String, Set<String>>> actionParams = new HashMap<>();
-
-      for (Action action : newResource.actions) {
-        Map<String, Set<String>> paramEnums = new HashMap<>();
-
-        // Process query parameters
-        for (Parameter param : action.queryParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            paramEnums.put("query:" + param.getName(), new HashSet<>(param.getEnumValues()));
-          }
-        }
-
-        // Process request body parameters
-        for (Parameter param : action.requestBodyParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            paramEnums.put("body:" + param.getName(), new HashSet<>(param.getEnumValues()));
-          }
-        }
-
-        actionParams.put(action.id, paramEnums);
-      }
-
-      newParamEnumsByResource.put(newResource.id, actionParams);
-    }
-
-    // Check for deleted enum values in parameters
     for (Resource oldResource : oldResources) {
       Map<String, Map<String, Set<String>>> newActionParams =
           newParamEnumsByResource.getOrDefault(oldResource.id, Collections.emptyMap());
@@ -1130,92 +680,151 @@ public class ChangeLogGenerator implements FileGenerator {
       for (Action action : oldResource.actions) {
         Map<String, Set<String>> newParamEnums =
             newActionParams.getOrDefault(action.id, Collections.emptyMap());
-
-        // Process query parameters
-        for (Parameter param : action.queryParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            Set<String> newValues =
-                newParamEnums.getOrDefault("query:" + param.getName(), Collections.emptySet());
-
-            List<String> deletedValues = new ArrayList<>();
-            for (String value : param.getEnumValues()) {
-              if (!newValues.contains(value)) {
-                deletedValues.add(value);
-              }
-            }
-
-            if (!deletedValues.isEmpty()) {
-              lines.add(
-                  formatDeletedParameterEnumValuesLine(
-                      deletedValues, oldResource, action, param, "query parameter"));
-            }
-          }
-        }
-
-        // Process request body parameters
-        for (Parameter param : action.requestBodyParameters()) {
-          if (param.isEnum() && !param.isGlobalEnum()) {
-            Set<String> newValues =
-                newParamEnums.getOrDefault("body:" + param.getName(), Collections.emptySet());
-
-            List<String> deletedValues = new ArrayList<>();
-            for (String value : param.getEnumValues()) {
-              if (!newValues.contains(value)) {
-                deletedValues.add(value);
-              }
-            }
-
-            if (!deletedValues.isEmpty()) {
-              lines.add(
-                  formatDeletedParameterEnumValuesLine(
-                      deletedValues, oldResource, action, param, "request body parameter"));
-            }
-          }
-        }
+        processDeletedParameterEnums(
+            oldResource, action, action.queryParameters(), "query", newParamEnums, lines);
+        processDeletedParameterEnums(
+            oldResource, action, action.requestBodyParameters(), "body", newParamEnums, lines);
       }
     }
-
     return lines;
   }
 
-  /**
-   * Format deleted parameter enum values into a single line
-   */
-  private String formatDeletedParameterEnumValuesLine(
+  private void processDeletedParameterEnums(
+      Resource resource,
+      Action action,
+      List<Parameter> parameters,
+      String prefix,
+      Map<String, Set<String>> newParamEnums,
+      List<String> lines) {
+    for (Parameter param : parameters) {
+      if (param.isEnum()
+          && !(param.isGlobalEnum() || param.isExternalEnum() || param.isGenSeperate())) {
+        List<String> deletedValues =
+            getNewEnumValues(
+                param.getEnumValues(),
+                newParamEnums.getOrDefault(prefix + ":" + param.getName(), Collections.emptySet()));
+        if (!deletedValues.isEmpty()) {
+          addDeletedParamEnumLine(
+              lines,
+              deletedValues,
+              resource,
+              action,
+              param,
+              prefix.equals("query") ? "query parameter" : "request body parameter");
+        }
+      }
+    }
+  }
+
+  private void addDeletedParamEnumLine(
+      List<String> lines,
       List<String> values,
       Resource resource,
       Action action,
       Parameter param,
-      String parameterType) {
+      String type) {
+    lines.add(
+        String.format(
+            "- %s from enum %s [`%s`](%s) in [`%s`](%s) of [`%s`](%s).",
+            formatValuesList(values, false),
+            type,
+            param.getName(),
+            getDocsUrlForParameter(resource, action, param),
+            action.id,
+            getDocsUrlForActions(resource, action),
+            resource.name,
+            getDocsUrlForResource(resource)));
+  }
 
-    if (values.isEmpty()) {
-      return "";
+  private Map<String, Map<String, Map<String, Set<String>>>> collectParameterEnums(
+      List<Resource> resources) {
+    Map<String, Map<String, Map<String, Set<String>>>> resourceMap = new HashMap<>();
+    for (Resource resource : resources) {
+      Map<String, Map<String, Set<String>>> actionMap = new HashMap<>();
+      for (Action action : resource.actions) {
+        Map<String, Set<String>> paramEnums = new HashMap<>();
+        collectEnumsFromParams(action.queryParameters(), "query", paramEnums);
+        collectEnumsFromParams(action.requestBodyParameters(), "body", paramEnums);
+        actionMap.put(action.id, paramEnums);
+      }
+      resourceMap.put(resource.id, actionMap);
     }
+    return resourceMap;
+  }
 
-    String valuesStr;
+  private void collectEnumsFromParams(
+      List<Parameter> params, String prefix, Map<String, Set<String>> paramEnums) {
+    for (Parameter param : params) {
+      if (param.isEnum()
+          && !(param.isGlobalEnum() || param.isExternalEnum() || param.isGenSeperate())) {
+        paramEnums.put(prefix + ":" + param.getName(), new HashSet<>(param.getEnumValues()));
+      }
+      if (param.schema.getProperties() != null) {
+        param
+            .schema
+            .getProperties()
+            .forEach(
+                (key, value) -> {
+                  if (isEnumSchema(value)
+                      && !(isGlobalEnumSchema(value)
+                          || isExternalEnumSchema(value)
+                          || isGenSeperatSchema(value))) {
+                    paramEnums.put(
+                        prefix + ":" + param.getName() + "." + key, getEnumValues(value));
+                  }
+                });
+      }
+    }
+  }
+
+  private String formatValuesList(List<String> values, boolean isAdded) {
+    if (values.isEmpty()) return "";
+    String action = isAdded ? "added as a new value" : "removed";
+    String actionPlural = isAdded ? "added as new values" : "removed";
+    String val0 = values.get(0);
+
     if (values.size() == 1) {
-      valuesStr = String.format("`%s` has been removed", values.get(0));
+      return String.format("`%s` has been %s", val0, action);
     } else if (values.size() == 2) {
-      valuesStr = String.format("`%s` and `%s` have been removed", values.get(0), values.get(1));
+      return String.format("`%s` and `%s` have been %s", val0, values.get(1), actionPlural);
     } else {
       String lastValue = values.get(values.size() - 1);
       String otherValues =
           values.subList(0, values.size() - 1).stream()
               .map(v -> String.format("`%s`", v))
               .collect(Collectors.joining(", "));
-      valuesStr = String.format("%s, and `%s` have been removed", otherValues, lastValue);
+      return String.format("%s, and `%s` have been %s", otherValues, lastValue, actionPlural);
     }
+  }
 
+  private String getDocsUrlForEvent(String eventType) {
+    return String.format("https://apidocs.chargebee.com/docs/api/events/webhook/%s", eventType);
+  }
+
+  private String getDocsUrlForResource(Resource resource) {
+    return String.format("https://apidocs.chargebee.com/docs/api/%s", pluralize(resource.id));
+  }
+
+  private String getDocsUrlForActions(Resource resource, Action action) {
     return String.format(
-        "- %s from enum %s [`%s`](%s) in [`%s`](%s) of [`%s`](%s).",
-        valuesStr,
-        parameterType,
-        param.getName(),
-        getDocsUrlForParameter(resource, action, param),
-        action.id,
-        getDocsUrlForActions(resource, action),
-        resource.name,
-        getDocsUrlForResource(resource));
+        "https://apidocs.chargebee.com/docs/api/%s/%s",
+        pluralize(resource.id), toHyphenCase(action.id));
+  }
+
+  private String getDocsUrlForAttribute(Resource resource, Attribute attribute) {
+    return String.format(
+        "https://apidocs.chargebee.com/docs/api/%s/%s-object#%s",
+        pluralize(resource.id), toHyphenCase(singularize(resource.id)), attribute.name);
+  }
+
+  private String getDocsUrlForParameter(Resource resource, Action action, Parameter param) {
+    return String.format(
+        "https://apidocs.chargebee.com/docs/api/%s/%s#%s",
+        pluralize(resource.id), toHyphenCase(action.id), param.getName());
+  }
+
+  private String toHyphenCase(String s) {
+    return CaseFormat.LOWER_UNDERSCORE.to(CaseFormat.LOWER_HYPHEN, s);
   }
 
   public boolean isEnumSchema(Schema schema) {
@@ -1236,13 +845,147 @@ public class ChangeLogGenerator implements FileGenerator {
         && (boolean) schema.getExtensions().get(IS_GLOBAL_ENUM);
   }
 
+  public boolean isExternalEnumSchema(Schema schema) {
+    return schema instanceof ArraySchema
+        ? isExternalEnumAttribute(schema.getItems())
+        : isExternalEnumAttribute(schema);
+  }
+
+  private boolean isExternalEnumAttribute(Schema schema) {
+    return schema.getExtensions() != null
+        && schema.getExtensions().get(IS_EXTERNAL_ENUM) != null
+        && (boolean) schema.getExtensions().get(IS_EXTERNAL_ENUM);
+  }
+
   public Set<String> getEnumValues(Schema schema) {
-    if (isGlobalEnumSchema(schema)) {
-      return Collections.emptySet();
-    }
-    if (!isEnumSchema(schema)) {
+    if (isGlobalEnumSchema(schema)
+        || isExternalEnumSchema(schema)
+        || !isEnumSchema(schema)
+        || isGenSeperatSchema(schema)) {
       return Collections.emptySet();
     }
     return new HashSet<>(new Enum(schema).values());
+  }
+
+  private List<String> generateParameterRequirementChanges(
+      List<Resource> oldResources, List<Resource> newResources) {
+
+    List<String> lines = new ArrayList<>();
+
+    // Build map of old parameters with their requirement status
+    Map<String, Map<String, Map<String, Boolean>>> oldParamRequirements = new HashMap<>();
+
+    for (Resource oldResource : oldResources) {
+      Map<String, Map<String, Boolean>> actionParams = new HashMap<>();
+
+      for (Action action : oldResource.actions) {
+        Map<String, Boolean> paramRequirements = new HashMap<>();
+
+        // Collect query parameters
+        for (Parameter param : action.queryParameters()) {
+          paramRequirements.put("query:" + param.getName(), param.isRequired);
+        }
+
+        // Collect request body parameters
+        for (Parameter param : action.requestBodyParameters()) {
+          paramRequirements.put("body:" + param.getName(), param.isRequired);
+        }
+
+        actionParams.put(action.id, paramRequirements);
+      }
+
+      oldParamRequirements.put(oldResource.id, actionParams);
+    }
+
+    // Check for requirement changes in new parameters
+    for (Resource newResource : newResources) {
+      Map<String, Map<String, Boolean>> oldActionParams =
+          oldParamRequirements.getOrDefault(newResource.id, Collections.emptyMap());
+
+      for (Action action : newResource.actions) {
+        Map<String, Boolean> oldParamReqs =
+            oldActionParams.getOrDefault(action.id, Collections.emptyMap());
+
+        // Check query parameters
+        for (Parameter param : action.queryParameters()) {
+          String key = "query:" + param.getName();
+          if (oldParamReqs.containsKey(key)) {
+            boolean wasRequired = oldParamReqs.get(key);
+            boolean isNowRequired = param.isRequired;
+
+            if (wasRequired && !isNowRequired) {
+              lines.add(
+                  String.format(
+                      "- [`%s`](%s) has been changed from required to optional in [`%s`](%s) of"
+                          + " [`%s`](%s).",
+                      param.getName(),
+                      getDocsUrlForParameter(newResource, action, param),
+                      action.id,
+                      getDocsUrlForActions(newResource, action),
+                      newResource.name,
+                      getDocsUrlForResource(newResource)));
+            } else if (!wasRequired && isNowRequired) {
+              lines.add(
+                  String.format(
+                      "- [`%s`](%s) has been changed from optional to required in [`%s`](%s) of"
+                          + " [`%s`](%s).",
+                      param.getName(),
+                      getDocsUrlForParameter(newResource, action, param),
+                      action.id,
+                      getDocsUrlForActions(newResource, action),
+                      newResource.name,
+                      getDocsUrlForResource(newResource)));
+            }
+          }
+        }
+
+        // Check request body parameters
+        for (Parameter param : action.requestBodyParameters()) {
+          String key = "body:" + param.getName();
+          if (oldParamReqs.containsKey(key)) {
+            boolean wasRequired = oldParamReqs.get(key);
+            boolean isNowRequired = param.isRequired;
+
+            if (wasRequired && !isNowRequired) {
+              lines.add(
+                  String.format(
+                      "- [`%s`](%s) has been changed from required to optional in [`%s`](%s) of"
+                          + " [`%s`](%s).",
+                      param.getName(),
+                      getDocsUrlForParameter(newResource, action, param),
+                      action.id,
+                      getDocsUrlForActions(newResource, action),
+                      newResource.name,
+                      getDocsUrlForResource(newResource)));
+            } else if (!wasRequired && isNowRequired) {
+              lines.add(
+                  String.format(
+                      "- [`%s`](%s) has been changed from optional to required in [`%s`](%s) of"
+                          + " [`%s`](%s).",
+                      param.getName(),
+                      getDocsUrlForParameter(newResource, action, param),
+                      action.id,
+                      getDocsUrlForActions(newResource, action),
+                      newResource.name,
+                      getDocsUrlForResource(newResource)));
+            }
+          }
+        }
+      }
+    }
+
+    return lines;
+  }
+
+  public boolean isGenSeperatSchema(Schema schema) {
+    return schema instanceof ArraySchema
+        ? isGenSeperateAttributeSchema(schema.getItems())
+        : isGenSeperateAttributeSchema(schema);
+  }
+
+  private boolean isGenSeperateAttributeSchema(Schema schema) {
+    return schema.getExtensions() != null
+        && schema.getExtensions().get(IS_GEN_SEPARATE) != null
+        && (boolean) schema.getExtensions().get((IS_GEN_SEPARATE));
   }
 }
